# Courses-at-Uni

./: .gitignore  README.md
C++/C++/Lista11_2/: CMakeLists.txt  Expression.cpp  Expression.hpp  Function.cpp  Function.hpp  Operand.cpp  Operand.hpp  Symbol.cpp  Symbol.hpp  main.cpp
Codeforces/12/: a.out  zadA.cpp  zadB.cpp  zadBW.py
Codeforces/13/: A.cpp  B.cpp  a.out
Codeforces/14/: A.cpp  Music - Shortcut.lnk  a.out  zadB.cpp
Codeforces/15/: a.out  zadA.cpp  zadB.cpp
Codeforces/Inne/: a.out  zadA.cpp  zadB.cpp
Codeforces/Zawody1/: zadC_1.cpp
Codeforces/Zawody10/: a.out  test.cpp  zadA.cpp  zadB.cpp  zadC.cpp
Codeforces/Zawody11/: a.out  zadA.cpp  zadB.cpp
Codeforces/Zawody2/: zadA.cpp  zadB.cpp  zadC.cpp  zadC_1.cpp  zadE.cpp
Codeforces/Zawody3/: a.out  zadA3.cpp  zadB3.cpp  zadC.cpp
Codeforces/Zawody4/: union_find.cpp  zadA.cpp  zadB  zadB.cpp  zadC  zadC.cpp
Codeforces/Zawody5/: a.out  p.py  test.cpp  test.in  zadA.cpp  zadB.cpp  zadC.cpp  zadD.cpp  zadD_copy.cpp
Codeforces/Zawody6/: a.out  zadA.cpp  zadADp.cpp  zadB.cpp  zadC.cpp  zadC_easy.cpp
Codeforces/Zawody7/: a.out  zadA.cpp  zadB.cpp
Codeforces/Zawody8/: a.out  zadA.cpp  zadB.cpp  zadC.cpp
Codeforces/Zawody9/: a.out  zadA.cpp  zadB.cpp  zadC.cpp
ComputerNetworks/ProgTasks/: commands.txt  icmp_checksum.c  icmp_receive1.c  traceroute_non_working.cpp
ComputerNetworks/ProgTasksSols/: viktoria_kashpruk.tar.xz
FunctionalProgramming/11_wyklad/: BF.hs  PF.hs
FunctionalProgramming/12_wyklad/: Triples.hs  (+1 more)
POO/: examPlan.txt
PracticalAlgorithms/: test_input.txt:Zone.Identifier
(+691 files in other folders)
